--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "dinner-planner",
   "description": "A starter project for Interaction Programming course Lab5",
   "version": "0.0.0",
-  "homepage": "https://github.com/kth-csc-iprog/dinnerplanner-html",
+  "homepage": "https://github.com/Wangels/iproglab5",
   "license": "MIT",
   "private": true,
   "dependencies": {
